--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,9 @@ env:
 
 jobs:
   list-publishable:
+    # Only run this job if pull request label is equal to "release"
+    # If this condition fails, build-and-publish will not run
+    if: ${{ github.event.label.name == 'release' }}
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -22,7 +25,7 @@ jobs:
           path: artifacts
       - name: 'Set matrix'
         id: set-matrix
-        # run script to generate matrix by getting a list of all directories that have a dockerfile as json array in the /artifact directory
+        # Run script to generate matrix by getting a list of all directories that have a dockerfile as json array in the /artifact directory
         run: |
           cd ./artifacts/apps
           JASON=$(find . -name "Dockerfile" -exec dirname {} \; | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')
