Add simple dockerfile for supreme gaming site
Puts static output behind an nginx instance with all requests routing to the index.html (necessary for SPA's)

--- a/apps/supremegaming-angular/project.json
+++ b/apps/supremegaming-angular/project.json
@@ -14,7 +14,13 @@
         "polyfills": "apps/supremegaming-angular/src/polyfills.ts",
         "tsConfig": "apps/supremegaming-angular/tsconfig.app.json",
         "aot": true,
-        "assets": ["apps/supremegaming-angular/src/favicon.ico", "apps/supremegaming-angular/src/assets"],
+        "assets": [
+          "apps/supremegaming-angular/src/favicon.ico",
+          "apps/supremegaming-angular/src/assets",
+          "apps/supremegaming-angular/src/Dockerfile",
+          "apps/supremegaming-angular/src/.dockerignore",
+          "apps/supremegaming-angular/src/.nginx"
+        ],
         "styles": ["apps/supremegaming-angular/src/styles.scss"],
         "scripts": [],
         "allowedCommonJsDependencies": ["webfontloader"]
@@ -47,6 +53,17 @@
             }
           ]
         }
+      }
+    },
+    "image-build": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          {
+            "command": "docker build -t supremegaming-angular ."
+          }
+        ],
+        "cwd": "dist/apps/supremegaming-angular"
       }
     },
     "serve": {
@@ -84,3 +101,4 @@
   },
   "tags": []
 }
+
