Implement multi-stage docker image build
Reduced final container size of both discord bot images from 800-900MB to ~150MB each.

Added sample dev docker compose files for easier testing

--- a/apps/supreme-discord-community-bot-node/src/Dockerfile
+++ b/apps/supreme-discord-community-bot-node/src/Dockerfile
@@ -1,7 +1,11 @@
-FROM node:16.17.0
+FROM node:16.17.0 as builder
 ENV NODE_ENV=production
 WORKDIR /app
 COPY package*.json ./
 RUN npm i --omit=dev --legacy-peer-deps
 COPY . ./
+
+FROM node:16.17.0-alpine
+WORKDIR /app
+COPY --from=builder /app .
 CMD ["node", "main.js"]
