--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/platform-browser": "16.1.8",
     "@angular/platform-browser-dynamic": "16.1.8",
     "@angular/router": "16.1.8",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "10.0.2",
     "@nestjs/core": "10.0.2",
     "@nestjs/jwt": "~10.1.0",
@@ -44,6 +45,8 @@
     "@nestjs/typeorm": "10.0.0",
     "@nx/angular": "16.6.0",
     "@paypal/paypal-js": "^5.1.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "discord.js": "^14.12.1",
     "marked": "^1.2.7",
     "mysql": "^2.18.1",
@@ -104,4 +107,3 @@
     "typescript": "5.1.6"
   }
 }
-
