--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@supremegaming/api": ["libs/api/src/index.ts"],
+      "@supremegaming/api/v1": ["libs/api/v1/src/index.ts"],
+      "@supremegaming/api/v2": ["libs/api/v2/src/index.ts"],
       "@supremegaming/common/entities": ["libs/common/entities/src/index.ts"],
       "@supremegaming/common/entities/administration": ["libs/common/entities/administration/src/index.ts"],
       "@supremegaming/common/entities/ark": ["libs/common/entities/ark/src/index.ts"],
