--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,7 @@
       "@supremegaming/common/entities/conan": ["libs/common/entities/conan/src/index.ts"],
       "@supremegaming/common/entities/servers": ["libs/common/entities/servers/src/index.ts"],
       "@supremegaming/common/entities/steam": ["libs/common/entities/steam/src/index.ts"],
+      "@supremegaming/common/entities/v1": ["libs/common/entities/v1/src/index.ts"],
       "@supremegaming/common/interfaces": ["libs/common/interfaces/src/index.ts"],
       "@supremegaming/common/ngx": ["libs/common/ngx/src/index.ts"],
       "@supremegaming/data-access": ["libs/data-access/src/index.ts"],
