--- a/apps/supreme-discord-community-bot-node/src/Dockerfile
+++ b/apps/supreme-discord-community-bot-node/src/Dockerfile
@@ -2,7 +2,7 @@ FROM node:16.17.0 as builder
 ENV NODE_ENV=production
 WORKDIR /app
 COPY package*.json ./
-RUN npm i --omit=dev --legacy-peer-deps
+RUN npm i --omit=dev
 COPY . ./
 
 FROM node:16.17.0-alpine
